--- a/section2_reacting_to_changes_with_computed_properties.html
+++ b/section2_reacting_to_changes_with_computed_properties.html
@@ -8,27 +8,22 @@
 <body>
 
 <div id="app">
-    <button v-on:click="increase">Increase</button>
-    <button v-on:click="decrease">Decrease</button>
-    <p>Counter :{{counter}}</p>
-    <p>Result :{{result}}</p>
+    <button v-on:click="counter++">Increase</button>
+    <button v-on:click="counter--">Decrease</button>
+
+    <p>Counter :{{ counter }}</p>
+    <p>Result :{{ result() }}</p>
 
 </div>
 <script>
     new Vue({
         el:'#app',
         data:{
-            counter : 0,
-            result: ''
+            counter : 0
         },
         methods:{
-            increase:function () {
-                this.counter++;
-                this.result = this.counter > 5 ? ' Greater 5': ' Smaller 5'
-            },
-            decrease:function () {
-                this.counter--;
-                this.result = this.counter > 5 ? ' Greater 5': ' Smaller 5'
+            result(){
+                return this.counter > 5 ? 'Greater 5' : 'Small than 5'
             }
         }
     });
