--- a/section_2_dynamic_styling_with_css.html
+++ b/section_2_dynamic_styling_with_css.html
@@ -14,13 +14,16 @@
     ></div>
     <div class="demo" :class = "{red : attachRed}"></div>
     <div class="demo" :class = "{black : attachRed}"></div>
-    <div class="demo"></div>
+    <div class="demo" :class = "[color, {red : attachRed}]"></div>
+    <hr>
+    <input type="text" v-model="color">
 </div>
 <script>
     new Vue ({
        el:'#app',
         data:{
-            attachRed: false
+            attachRed: false,
+            color : 'black'
         },
         compute:{
             divClasses: function(){
