--- a/section_2_setting_style_dynamicly_without_CSS_clasess.html
+++ b/section_2_setting_style_dynamicly_without_CSS_clasess.html
@@ -10,7 +10,8 @@
 <div id="app">
     <div class="demo" :style="{backgroundColor: color}"></div>
     <div class="demo" :style="myStyle"></div>
-    <div class="demo" :style="{width : width}"></div>
+    <div class="demo" :style="{width : width + 'px'}"></div>
+    <div class="demo" :style="[myStyle, {height: width + 'px'}]"></div>
     <hr>
     <input type="text" v-model="color">
     <input type="text" v-model="width">
