--- a/section_7.html
+++ b/section_7.html
@@ -11,15 +11,22 @@
     <hr>
     <my-cmp></my-cmp>
 </div>
+<div id="app2">
+    <my-cmp></my-cmp>
+    <hr>
+    <my-cmp></my-cmp>
+</div>
 <script>
     //if want to share same dara source
     //var data={ status: 'Critical'};
-    Vue.component('my-cmp',{
+
+
+    //component locally
+    var cmp = {
         //if want to share same dara source
         /*data: function () {
           return data;
         },*/
-
 
         data: function () {
             return {
@@ -32,10 +39,32 @@
                 this.status = 'normal'
             }
         }
+    };
+
+    //Component Globally
+    Vue.component('my-cmp',{
+
+        data: function () {
+            return {
+                status: 'Fucking'
+            }
+        },
+        template: '<p>Server Status:{{status}} (<button @click="changeStatus">Change</button>)</p>',
+        methods:{
+            changeStatus: function () {
+                this.status = 'Facking'
+            }
+        }
     });
 
     new Vue({
-        el: '#app'
+        el: '#app',
+        components:{
+            'my-cmp' : cmp
+        }
+    });
+    new Vue({
+        el: '#app2'
     });
 </script>
 </body>
